# yolo_unetpp_seg

./: .gitignore  02_Divisão_do_Conjunto_de_Dados.ipynb  README.md  dataset.yaml  pyproject.toml
L3netDemoData_Divisao/: test.csv  train.csv  valid.csv
model_checkpoints/: README.md  config.json
runs/segment/train72/: args.yaml  results.csv
